[package]
authors = ["jD91mZM2 <me@krake.one>"]
description = "powerline-shell rewritten in Rust. Inspired by powerline-go."
license-file = "LICENSE"
name = "powerline-rs"
readme = "README.md"
repository = "https://github.com/jD91mZM2/powerline-rs"
version = "0.1.7-alpha.0"
[build-dependencies]
clap = "2.29.2"

[dependencies]
clap = "2.29.2"

[dependencies.chrono]
optional = true
version = "0.4.0"

[dependencies.flame]
optional = true
version = "0.2.0"

[dependencies.git2]
optional = true
version = "0.6.11"

[features]
default = ["chrono", "git2"]
