[package]
authors = ["jD91mZM2 <me@krake.one>"]
description = "powerline-shell rewritten in Rust. Inspired by powerline-go."
edition = "2018"
license-file = "LICENSE"
name = "powerline-rs"
readme = "README.org"
repository = "https://github.com/jD91mZM2/powerline-rs"
version = "0.2.1"

[build-dependencies]
clap = "2.33.0"

[dependencies]
clap = "2.33.0"
dirs = "2.0.2"

[dependencies.chrono]
optional = true
version = "0.4.9"

[dependencies.flame]
optional = true
version = "0.2.2"

[dependencies.git2]
optional = true
default-features = false
version = "0.10.1"

[dependencies.users]
optional = true
version = "0.9.1"

[features]
default = ["chrono", "git2", "users"]
